--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,13 @@
-streamlit
+
+
 langchain
-langchain-community
-faiss-cpu
-chromadb
-sentence-transformers
-transformers
-torch
-PyMuPDF
-beautifulsoup4
-requests 
-speechrecognition
-yt-dlp
-whisper
+langchain_groq
+pytube 
+PyPDF2
+pdf2image 
+beautifulsoup4 
+streamlit 
+fastapi 
+uvicorn 
+tiktoken 
 youtube-transcript-api
-matplotlib
-plotly
-paddleocr
-smtplib
-email-validator
-pdf2image
-pytesseract
-paddlepaddle
