--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-
-
 langchain
 langchain_groq
 pytube 
@@ -7,6 +5,7 @@ PyPDF2
 pdf2image 
 beautifulsoup4 
 streamlit 
+python-dotenv
 fastapi 
 uvicorn 
 tiktoken 
